VPCcreation.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A sample template

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: keyvpc
  
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: stack
        Value: production

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: 
         Ref: VPC
      InternetGatewayId: 
         Ref: InternetGateway
  
  
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: ap-south-1a
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      VpcId:
         Ref: VPC
      Tags:
      - Key: Name
        Value: publicsubent

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: ap-south-1a
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      VpcId:
         Ref: VPC
      Tags:
      - Key: Name
        Value: privatesubent

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: Name
          Value: publicroute
      VpcId: 
         Ref: VPC
      
  
  myRoute:
    Type: AWS::EC2::Route
    Properties:
       RouteTableId:
         Ref: RouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: InternetGateway
  
  subnetassociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
         Ref: RouteTable
      SubnetId: 
         Ref: PublicSubnet
  
  
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Allow http and ssh access
      GroupName: websg
      SecurityGroupEgress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId: 
         Ref: VPC
      Tags:
      - Key: Name
        Value: webappsg
      
    
  MyEC2Instance: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: "ami-02a2af70a66af6dfb"
      InstanceType: "t2.micro"
      KeyName: "account01"
      SubnetId: 
            Ref: PublicSubnet
      SecurityGroupIds:
        - Ref:  EC2SecurityGroup
      
      Tags:
      - Key: Name
        Value: productionserver
